fix: Rectified all bugs stopping apllication from working and rearranged code base to improve code readability.

--- a/style.css
+++ b/style.css
@@ -35,7 +35,6 @@ body {
   padding: 30px;
   background-color: #ffffff;
   border-radius: 8px;
-  cursor: pointer;
   width: 450px;
 }
 
@@ -198,6 +197,12 @@ svg.point {
 
 .error {
   color: #ec6062;
+  text-align: center;
+  margin: 10px 0 0 0;
+}
+
+.success {
+  color: #98ec60;
   text-align: center;
   margin: 10px 0 0 0;
 }
